--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
         <meta charset="utf-8">
         <title>Oscar's Webfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,65 +12,70 @@
         <link rel="stylesheet" href = "https://fonts.google.com/?selection.family=Raleway">
     </head>
     <body>
-        <header class = "container">
+      <section>
+        <header class = "container-fluid hero">
           <div class="row">
-            <div class="col-md-12"id="header">
-              <img id="logo" src = "images/full-stack-logo.jpg" alt = "logo">
+            <div class="col-md-8 intro">
               <h1>Oscar Chan</h1>
-              <h4>Full Stack of Pancakes and Full-Stack Developer</h4>
+              <h5>Business Analyst turned Front-End Developer</h5>
+              <p>After starting my career as a business analyst,
+                I fell in love with the world of web development when learning
+                some basic HTML/CSS. I have been learning on my own ever since and
+                I aspire to find a career in Front-End software development.</p>
+              <p>Location: Sunny Orange County, California</p>
+              <p>Currently Learning: React.js, Ruby on Rails, React Native</p>
+
             </div>
-              <nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
-                <button class="navbar-toggler navbar-toggler-right" type="button"
-                        data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" href="#">Welcome to my site!</a>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#nav-projects">Projects</a>
-                    <a class="nav-item nav-link" href="#nav-exp">Experience</a>
-                    <a class="nav-item nav-link" href="#nav-skills">Skills</a>
-                  </div>
-                </div>
-              </nav>
-            <img class = "col-md-12" id="hero" src = "images/front-end.jpeg" alt ="hero_image">
+
           </div>
         </header>
 
-        <div class="container" id = "featured_work">
+        <div class="container-fluid" id="nav-skills">
+          <h2 class="headers">Skills</h2>
+            <h3>Front-End:</h3>
+            <div class="skill-section">
+                <div class="skill color grow"><i class="fab fa-html5"></i> HTML5</div>
+                <div class="skill color grow"><i class="fab fa-css3-alt"></i> CSS3</div>
+                <div class = "skill color grow"><i class="fab fa-js-square"></i> Javascript</div>
+                <div class = "skill color grow"><i class="fab fa-react"></i> React</div>
+            </div>
+            <h3>Back-End:</h3>
+
+            <div class ="skill-section">
+                <div class = "skill color grow"><i class="fab fa-python"></i> Python Flask</div>
+                <div class = "skill color grow"><i class="fas fa-database"></i> Postgre SQL</div>
+                <div class = "skill color grow"><i class="fas fa-code"></i> Java</div>
+                <div class = "skill color grow"><i class="fas fa-code-branch"></i> Git Control</div>
+            </div>
+          </div>
+      <div id = "nav-projects"></div>
+        <div class="container-fluid" id = "featured-work">
           <div class = "row">
             <div class ="col-md-12">
               <h2 class ="headers">Projects</h2>
               <div class="card-deck">
                 <div class="card">
-                  <img class="card-img-top" src="images/movie.jpg" alt="Card image cap">
+                  <img class="card-img-top" src="images/pexels-photo.jpg" alt="Card image cap">
                   <div class="card-block">
-                  <h4 class="card-title">Fresh Tomatoes</h4>
-                  <p class="card-text">Server-side Python Application that has
-                                       information about all of my favorite movies
-                                       and their trailers.</p>
-                  <a href="#" class="btn btn-primary">Check it Out!</a>
+                  <h4 class="card-title">Cat Clicker</h4>
+                  <p class="card-text">Front-End web application demonstrating Knockout.js framework and MVVM modeling</p>
+                  <a href="https://chanoscar0.github.io/Cat_Clicker_Knockout/" class="btn btn-primary">Check it Out!</a>
                 </div>
               </div>
               <div class="card">
-                <img class="card-img-top" src="images/weather.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/Beach.jpeg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">What's The Weather?</h4>
-                  <p class="card-text">PHP-Based page where I extract the weather
-                                       information using a REST procedure.</p>
-                  <a href="#" class="btn btn-primary">Check it out!</a>
+                  <h4 class="card-title">Things to do in the OC</h4>
+                  <p class="card-text">Knockout.js web application utilizing Google Maps and Foursquare API. Shows location info for popular spots around Orange County</p>
+                  <a href="https://chanoscar0.github.io/Neighborhood_Map/Udacity_Neighborhood_Map/" class="btn btn-primary">Check it out!</a>
                 </div>
               </div>
               <div class="card">
-                <img class="card-img-top" src="images/python.jpg" alt="Card image cap">
+                <img class="card-img-top" src="images/burger.jpeg" alt="Card image cap">
                 <div class="card-block">
-                  <h4 class="card-title">Python</h4>
-                  <p class="card-text">Server-side Python connection with backend
-                                       database with manipulation.</p>
-                  <a href="#" class="btn btn-primary">Check it out!</a>
+                  <h4 class="card-title">Burger Builder</h4>
+                  <p class="card-text">Complete Web application built using React JS</p>
+                  <a href="#" class="btn btn-primary">In Progress</a>
                   <div id = "nav-exp"></div>
                 </div>
               </div>
@@ -77,32 +83,7 @@
           </div>
         </div>
       </div>
-      <div class="container" id="experience">
-        <div class = "row">
-          <div class = "col-md-12">
-            <h2 class="headers">Experience</h2>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
 
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-            <div id = "nav-skills"></div>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-          </div>
-        </div>
-      </div>
-      <div class="container" id="skills">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="headers">Skills</h2>
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-
-            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
-          </div>
-
-        </div>
-      </div>
+</section>
     </body>
 </html>
