Feature: Contact section

--- a/index.html
+++ b/index.html
@@ -83,7 +83,24 @@
           </div>
         </div>
       </div>
+      <div class = 'container-fluid footer'>
+        <h2 class = 'headers'>Contact Me:</h2>
+        <div class = "link">
+          <a href = 'https://github.com/chanoscar0'><i class="fab fa-github"></i> chanoscar0.github.com </a> |
+          <a href = 'https://www.linkedin.com/in/occhan/'><i class="fab fa-linkedin"></i> linkedin.com/occhan</a> |
+          Phone: 909-802-4718 |
+          Email: chanoscar0@gmail.com
+
+
+
+
+        </div>
+
+
+      </div>
 
 </section>
+
+
     </body>
 </html>
