Feature: CSS Grid

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       <div class = 'container-fluid footer'>
         <h2 class = 'headers'>Contact Me:</h2>
         <div class = "link">
-          <a href = 'https://github.com/chanoscar0'><i class="fab fa-github"></i> chanoscar0.github.com </a> |
-          <a href = 'https://www.linkedin.com/in/occhan/'><i class="fab fa-linkedin"></i> linkedin.com/occhan</a> |
-          Phone: 909-802-4718 |
-          Email: chanoscar0@gmail.com
+          <div><a href = 'https://github.com/chanoscar0'><i class="fab fa-github"></i> chanoscar0.github.com </a> </div>
+          <div><a href = 'https://www.linkedin.com/in/occhan/'><i class="fab fa-linkedin"></i> linkedin.com/occhan</a> </div>
+          <div>Phone: 909-802-4718 </div>
+          <div>Email: chanoscar0@gmail.com </div>
         </div>
       </div>
 
