Feature: Burger-builder

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <img class="card-img-top" src="images/burger.jpeg" alt="Card image cap">
                 <div class="card-block">
                   <h4 class="card-title">Burger Builder</h4>
-                  <p class="card-text">Complete Web application built using React JS</p>
-                  <a href="#" class="btn btn-primary">In Progress</a>
+                  <p class="card-text">Complete Web Application built using React JS</p>
+                  <a href="https://chanoscar0.github.io/burger-builder/" class="btn btn-primary">Check it out!</a>
                   <div id = "nav-exp"></div>
                 </div>
               </div>
